[package]
name = "viewdb"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
clap = "2.22.1"
config = { version = "0.6.0", features = ["toml"], default-features = false }
lazy_static = "0.2.8"
num_cpus = "1.3.0"
log = "0.3.6"
log4rs = { version = "0.6.1", features = ["toml_format"] }
mio = "0.6.4"

viewdb_engine = { version = "0.1.0", path = "../viewdb_engine" }
pumpkindb_mio_server = { git = "https://github.com/PumpkinDB/PumpkinDB", rev = "577adbe"}